added ref Fischer2021

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1025,6 +1025,17 @@
   url       = {https://www.jstor.org/stable/j.ctt1nq38c},
 }
 
+@MastersThesis{Amalvy2020,
+  author      = {Amalvy, A.},
+  title       = {Natural Language Processing applied to Interactive Character Relationships Visualization in Novels},
+  year        = {2020},
+  type        = {MSc Thesis},
+  institution = {Université de technologie de Belfort Montbéliard / National Central University},
+  owner       = {Vincent},
+  timestamp   = {2021.03.16},
+  url         = {https://cloud.klmp200.net/index.php/s/f7YRqcW9oAwwLKd},
+}
+
 @Article{Amancio2012,
   author    = {Amancio, D. R. and Oliveira, O. N. and da Fontoura Costa, L.},
   title     = {Three-feature model to reproduce the topology of citation networks and the effects from authors' visibility on their h-index},
@@ -5162,6 +5173,16 @@
   doi       = {10.1023/a:1009715923555},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Burnard2014,
+  title     = {What is the Text Encoding Initiative? How to add intelligent markup to digital resources},
+  publisher = {OpenEdition Press},
+  year      = {2014},
+  author    = {Burnard, L.},
+  doi       = {10.4000/books.oep.426},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
 }
 
 @Book{Burnett2011,
@@ -9643,16 +9664,15 @@
   timestamp = {2019.12.31},
 }
 
-@Article{Edwards2018,
-  author    = {Edwards, M. and Mitchell, L. and Tuke, J. and Roughan, M.},
+@InProceedings{Edwards2018,
+  author    = {Edwards, M. and Tuke, J. and Roughan, M. and Mitchell, L.},
   title     = {The one comparing narrative social network extraction techniques},
-  journal   = {arXiv},
-  year      = {2018},
-  volume    = {cs.SI},
-  pages     = {1811.01467},
+  booktitle = {IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2020},
+  pages     = {905-913},
+  doi       = {10.1109/ASONAM49781.2020.9381346},
   owner     = {Vincent},
   timestamp = {2018.11.09},
-  url       = {https://arxiv.org/abs/1811.01467},
 }
 
 @MastersThesis{Edwards2019,
@@ -10983,6 +11003,16 @@
   url       = {http://dh2015.org/abstracts/xml/FISCHER_Frank_Digital_Network_Analysis_of_Dramati/FISCHER_Frank_Digital_Network_Analysis_of_Dramatic_Text.html},
 }
 
+@InProceedings{Fischer2016,
+  author    = {Fischer, F. and Kittel, C. and Trilcke, P. and Göbel, M. and Vogel, A. and Meiners, H.-L. and Kampkaspar, D.},
+  title     = {Distant-Reading Showcase. 200 Years of German-Language Drama at a Glance},
+  booktitle = {Digital Humanities im deutschsprachigen Raum e. V.},
+  year      = {2016},
+  doi       = {10.6084/m9.figshare.3101203},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+}
+
 @Article{Fischer2017,
   author    = {Fischer, F. and Dazord, G. and Göbel, M. and Kittel, C. and Trilcke, P.},
   title     = {Le drame comme réseau de relations : Une application de l'analyse automatisée pour l'histoire littéraire du théâtre},
@@ -11027,6 +11057,30 @@
   groups       = {Character Nets},
   owner        = {Vincent},
   timestamp    = {2019.06.24},
+}
+
+@InProceedings{Fischer2018b,
+  author    = {Fischer, F. and Trilcke, P. and Kittel, C. and Milling, C. and Skorinkin, D.},
+  title     = {To Catch a Protagonist: Quantitative Dominance Relations in German-Language Drama (1730-1930)},
+  booktitle = {Digital Humanities Conference},
+  year      = {2018},
+  pages     = {193-200},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+  url       = {https://dh2018.adho.org/?p=9362},
+}
+
+@InCollection{Fischer2021,
+  author    = {Fischer, F. and Skorinkin, D.},
+  title     = {Social Network Analysis in Russian Literary Studies},
+  booktitle = {The Palgrave Handbook of Digital Russia Studies},
+  publisher = {Palgrave Macmillan},
+  year      = {2021},
+  chapter   = {29},
+  pages     = {517-536},
+  doi       = {10.1007/978-3-030-42855-6_29},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
 }
 
 @Article{Fisher1936,
@@ -11596,14 +11650,14 @@
   timestamp = {2020.11.30},
 }
 
-@InCollection{FronzettiColladon2020,
+@InProceedings{FronzettiColladon2020,
   author    = {Fronzetti Colladon, A. and Naldi, M.},
   title     = {Concentration Indices for Dialogue Dominance Phenomena in TV Series: The Case of the Big Bang Theory},
   booktitle = {International Conference on the Statistical Analysis of Textual Data},
-  publisher = {Springer},
-  year      = {2020},
+  year      = {2018},
   series    = {Studies in Classification, Data Analysis, and Knowledge Organization},
   pages     = {55-64},
+  publisher = {Springer},
   doi       = {10.1007/978-3-030-52680-1_5},
   owner     = {Vincent},
   timestamp = {2020.11.30},
@@ -11984,6 +12038,19 @@
   owner     = {Vincent},
   review    = {arXiv: http://arxiv.org/abs/1205.3720},
   timestamp = {2012.05.23},
+}
+
+@Article{Garcia-Sanchez2021,
+  author    = {García-Sánchez, P. and Velez-Estevez, A, and Merelo, J. J. and Cobo, M. J.},
+  title     = {The Simpsons did it: Exploring the film trope space and its large scale structure},
+  journal   = {PLoS ONE},
+  year      = {2021},
+  volume    = {16},
+  number    = {3},
+  pages     = {e0248881},
+  doi       = {10.1371/journal.pone.0248881},
+  owner     = {Vincent},
+  timestamp = {2021.04.01},
 }
 
 @Article{Gardan2018,
@@ -12479,6 +12546,16 @@
   owner     = {Vincent},
   timestamp = {2017.12.09},
   url       = {http://www.prasa.org/proceedings/2007/prasa07-05.pdf},
+}
+
+@InProceedings{Glass2007a,
+  author    = {Glass, K. and Bangay, S.},
+  title     = {A naïve, salience-based method for speaker identification in fiction books},
+  booktitle = {18th International Symposium of the Pattern Recognition Association of South Africa},
+  year      = {2007},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+  url       = {http://hdl.handle.net/10536/DRO/DU:30039199f},
 }
 
 @Book{Gleed2009,
@@ -13935,6 +14012,17 @@
   timestamp = {2020.07.24},
 }
 
+@Article{Haq2021,
+  author    = {Ul Haq, I. and Muhammad, K. and Hussain, T. and Del Ser, J. and Sajjad, M. and Baik, S. W.},
+  title     = {{QuickLook}: Movie Summarization using Scene-based Leading Characters with Psychological Cues Fusion},
+  journal   = {Information Fusion},
+  year      = {2021},
+  volume    = {in press},
+  doi       = {10.1016/j.inffus.2021.04.016},
+  owner     = {Vincent},
+  timestamp = {2021.05.01},
+}
+
 @InProceedings{Harabagiu2005,
   author    = {Harabagiu, S. and Bejan, C. A. and Morarescu, P.},
   title     = {Shallow semantics for relation extraction},
@@ -14756,6 +14844,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://aclweb.org/anthology/papers/W/W05/W05-0303/},
+}
+
+@Article{Hipson2021,
+  author    = {Hipson, W. E. and Mohammad, S. M.},
+  title     = {Emotion Dynamics in Movie Dialogues},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {cs.CL},
+  pages     = {2103.01345},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+  url       = {https://arxiv.org/abs/2103.01345},
 }
 
 @InProceedings{Hirata2016,
@@ -16438,6 +16538,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {https://www.research.manchester.ac.uk/portal/files/162575015/ethesis_with_cover_page_FINAL_PJ.pdf},
 }
 
+@Article{Joubert2021,
+  author    = {Joubert, E.},
+  title     = {`Distant Reading' in French Music Criticism},
+  journal   = {Nineteenth-Century Music Review},
+  year      = {2021},
+  volume    = {in press},
+  doi       = {10.1017/s1479409820000476},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+}
+
 @Article{Jovanovic2014,
   author    = {Jovanovic, J. and Bagheri, E. and Cuzzola, J. and Gasevic, D. and Jeremic, Z. and Bashash, R.},
   title     = {Automated semantic tagging of textual content},
@@ -17081,6 +17192,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1371/journal.pone.0160452},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Khan2021,
+  author    = {Khan, A.},
+  title     = {Revisiting Jane Austen through Austenistan: Pakistani and Western Perspectives},
+  journal   = {Open Journal of Social Sciences},
+  year      = {2021},
+  volume    = {09},
+  number    = {03},
+  pages     = {26-39},
+  doi       = {10.4236/jss.2021.93003},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
 }
 
 @Article{Khatoonabadi2009,
@@ -18236,6 +18360,27 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@InProceedings{Kubis2019,
+  author    = {Kubis, M. and Mickiewicz, A.},
+  title     = {Quantitative Analysis of Character Networks in Polish XIX and XX Century Novels},
+  booktitle = {Digital Humanities},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+  url       = {https://dev.clariah.nl/files/dh2019/boa/0843.html},
+}
+
+@Article{Kubis2021,
+  author    = {Kubis, M.},
+  title     = {Quantitative analysis of character networks in Polish 19th- and 20th-century novels},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2021},
+  volume    = {in press},
+  doi       = {10.1093/llc/fqab012},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+}
+
 @Article{Kudo2001,
   author    = {Kudo, H. and Dunbar, R. I. M.},
   title     = {Neocortex size and social network size in primates},
@@ -19329,7 +19474,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Lee2018,
-  author    = {Lee, O.-J. and Jung, J. J.},
+  author    = {Lee, O-J. and Jung, J. J.},
   title     = {Modeling affective character network for story analytics},
   journal   = {Future Generation Computer Systems},
   year      = {2019},
@@ -20774,6 +20919,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.03.06},
 }
 
+@Article{Liu2019a,
+  author    = {Liu, Y. and Ott, M. and Goyal, N. and Du, J. and Joshi, M. and Chen, D. and Levy, O. and Lewis, M. and Zettlemoyer, L. and Stoyanov, V.},
+  title     = {RoBERTa: A Robustly Optimized BERT Pretraining Approach},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.CL},
+  number    = {1907.11692},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+  url       = {https://arxiv.org/abs/1907.11692},
+}
+
 @Article{Liu2020,
   author    = {Liu, W. and Zhou, P. and Zhao, Z. and Wang, Z. and Ju, Q. and Deng, H. and Wang, P.},
   title     = {K-BERT: Enabling Language Representation with Knowledge Graph},
@@ -21779,6 +21936,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@InProceedings{Mara2020,
+  author    = {Mara, A. and Mashayekhi, Y. and Lijffijt, J. and De Bie, T.},
+  title     = {CSNE: Conditional Signed Network Embedding},
+  booktitle = {29th ACM International Conference on Information \& Knowledge Management},
+  year      = {2020},
+  pages     = {1105-1114},
+  doi       = {10.1145/3340531.3411959},
+  owner     = {Vincent},
+  timestamp = {2020.05.27},
+}
+
 @Article{Maranzato2010,
   author    = {Maranzato, R. and Pereira, A. and Neubert, M. and Pereira do Lago, A.},
   title     = {Fraud detection in reputation systems in e-markets using logistic regression and stepwise optimization},
@@ -22540,6 +22708,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2015.09.24},
   url       = {https://www.cmu.edu/joss/content/articles/volume12//McCullohCarley.pdf},
+}
+
+@Book{McCulloh2013,
+  title     = {Social network analysis with applications},
+  publisher = {John Wiley},
+  year      = {2013},
+  author    = {McCulloh, I. and Armstrong, H. and Johnson, A.},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+  url       = {https://www.wiley.com/en-us/Social+Network+Analysis+with+Applications-p-9781118169476},
 }
 
 @InProceedings{McDonald2006,
@@ -23369,6 +23547,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.specom.2012.05.002},
   owner     = {Vincent},
   timestamp = {2018.07.09},
+}
+
+@Article{Modell2021,
+  author    = {Modell, A. and Rubin-Delanchy, P.},
+  title     = {Spectral clustering under degree heterogeneity: a case for the random walk Laplacian},
+  journal   = {arXiv},
+  year      = {2021},
+  owner     = {Vincent},
+  timestamp = {2021.05.05},
+  url       = {https://arxiv.org/abs/2105.00987},
 }
 
 @InProceedings{Modi2016,
@@ -28019,6 +28207,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://is.muni.cz/publication/884893/en},
 }
 
+@Article{Reichelt2020,
+  author    = {Reichelt, S.},
+  title     = {Innovation on screen: Marked affixation as characterization cue in Buffy the Vampire Slayer},
+  journal   = {Corpus approaches to telecinematic language},
+  year      = {2020},
+  volume    = {26},
+  number    = {1},
+  pages     = {95-126},
+  doi       = {10.1075/ijcl.00038.rei},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+}
+
 @InProceedings{Reimers2019,
   author    = {Reimers, N. and Gurevych, I.},
   title     = {Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
@@ -30099,6 +30300,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.11.11},
 }
 
+@InProceedings{Schoech2018,
+  author    = {Schöch, C. and Eder, M. and Odebrecht, C. and Kestemont, M. and Primorac, A. and Tonra, J. and Poniž, K. M. and Kanellopoulou, C.},
+  title     = {Distant Reading for European Literary History. A COST Action.},
+  booktitle = {Digital Humanities Conference},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+  url       = {https://dh2018.adho.org/en/?p=11345},
+}
+
 @InProceedings{Scholand2010,
   author    = {Scholand, A. and Tausczik, Y. and Pennebaker, J.},
   title     = {Linguistic analysis of workplace computer-mediated communication},
@@ -31002,6 +31213,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.02},
   url       = {dialog-21.ru/media/3947/skorinkinda.pdf},
+}
+
+@InProceedings{Skorinkin2018,
+  author    = {Skorinkin, D. and Fischer, F. and Palchikov, G.},
+  title     = {Building a Corpus for the Quantitative Research of Russian Drama: Composition, Structure, Case Studies},
+  booktitle = {International Conference Dialogue},
+  year      = {2018},
+  pages     = {662-682},
+  owner     = {Vincent},
+  timestamp = {2021.05.14},
+  url       = {http://www.dialog-21.ru/media/4332/skorinkind.pdf},
 }
 
 @InProceedings{Skrlj2019b,
@@ -33000,6 +33222,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.vanhamel.nl/codecs/Thomson_(D._S.)_1952a},
 }
 
+@Article{Thon2019,
+  author    = {Thon, J.-N.},
+  title     = {Transmedia characters: Theory and analysis},
+  journal   = {Frontiers of Narrative Studies},
+  year      = {2019},
+  volume    = {5},
+  number    = {2},
+  pages     = {176-199},
+  doi       = {10.1515/fns-2019-0012},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+}
+
 @Article{Thorp1937,
   author    = {Thorp, M.},
   title     = {The Unity of the Nibelungenlied},
@@ -33413,7 +33648,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Tran2017a,
-  author    = {Tran, Q. D. and Hwang, D. and Lee, O.-J. and Jung, J. E.},
+  author    = {Tran, Q. D. and Hwang, D. and Lee, O-J. and Jung, J. E.},
   title     = {Exploiting character networks for movie summarization},
   journal   = {Multimedia Tools and Applications},
   year      = {2017},
@@ -33426,7 +33661,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @InProceedings{Tran2017b,
-  author    = {Tran, Q. D. and Hwang, D. and Lee, O.-J. and Jung, J. J.},
+  author    = {Tran, Q. D. and Hwang, D. and Lee, O-J. and Jung, J. J.},
   title     = {A novel method for extracting dynamic character network from movie},
   booktitle = {International Conference on Big Data Technologies and Applications},
   year      = {2017},
@@ -35343,6 +35578,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1511.08198},
 }
 
+@Article{Wilde2019,
+  author    = {Wilde , L. R. A.},
+  title     = {Recontextualizing Characters. Media Convergence and Pre-/MetaNarrative Character Circulation},
+  journal   = {Iimage},
+  year      = {2019},
+  volume    = {29},
+  pages     = {3-21},
+  abstract  = {This introduction to the topic of character recontextualization sets out to address a variety of character products that cannot be adequately described as ›narrative‹: Coffee mugs, clothes, office supplies, and other material objects. Fictitious entities such as Hello Kitty or Hatsune Miku have given rise to a veritable wave of literature in Japanese studies outlining a ›pre-narrative character theory‹. Characters without stories, based entirely on highly affective iconographies, often function as hubs, interfaces, or intersections for diverging ›games of make-believe‹ that are in turn often forms of an aesthetic, medial, social, and especially diegetic recontextualization. Consequently, every pre-narrative character could also be addressed as a decontextualized, trans-fictional, transworld, or »meta-narrative nodal point« (AZUMA). Often, these recontextualizations take place within the collaborative networks of participatory culture, highlighting the decontextualized character state as central to what is known as ›media convergence‹ or ›media mix‹. I will situate these discussions within the field of international character theory, arguing that a systematic divide runs through existing literature on how to deal with decontextualized, trans-fictional, trans-world entities. My article closes with some indications on what a discourse often seen as specific for Japanese studies, might contribute on a variety of international phenomena and perspectives.},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+  url       = {http://www.gib.uni-tuebingen.de/image/image?function=fnArticle&showArticle=516},
+}
+
 @Book{Wilensky1978,
   title     = {Understanding Goal-Based Stories},
   publisher = {Garland Publishing},
@@ -36327,6 +36575,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Yavuz2020,
+  author    = {Yavuz, M. C.},
+  title     = {Analyses of Character Networks in Dramatic Works by Using Graphs},
+  booktitle = {7th International Conference on Behavioural and Social Computing},
+  year      = {2020},
+  doi       = {10.1109/BESC51023.2020.9348328},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
+}
+
 @Article{Yazdani2010,
   author    = {Yazdani, A. and Jeffrey, P.},
   title     = {A note on measurement of network vulnerability under random and intentional attacks},
@@ -37008,6 +37266,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.jbi.2018.03.011},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@InProceedings{Zhang2018ah,
+  author    = {Zhang, L. and Li, C. and Fan, L. and Shi, M.},
+  title     = {Analysis of Character Relationship in {TV} Series Based on Complex Network},
+  booktitle = {17th IEEE/ACIS International Conference on Computer and Information Science},
+  year      = {2018},
+  pages     = {723-727},
+  doi       = {10.1109/icis.2018.8466543},
+  owner     = {Vincent},
+  timestamp = {2021.03.27},
 }
 
 @InProceedings{Zhang2019aa,
