--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -30310,6 +30310,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh2018.adho.org/en/?p=11345},
 }
 
+@Article{Schoech2021,
+  author    = {Schöch, C. and Patras, R. and Erjavec, T. and Santos, D.},
+  title     = {Creating the European Literary Text Collection (ELTeC): Challenges and Perspectives},
+  journal   = {Modern Languages Open},
+  year      = {2021},
+  volume    = {in press},
+  groups    = {Literature},
+  owner     = {Vincent},
+  timestamp = {2021.05.15},
+  url       = {https://www.linguateca.pt/Diana/download/Schochetal2021.pdf},
+}
+
 @InProceedings{Scholand2010,
   author    = {Scholand, A. and Tausczik, Y. and Pennebaker, J.},
   title     = {Linguistic analysis of workplace computer-mediated communication},
